# zestful

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
cli/: zestful
hooks/: claude-code.json  cline-hook.sh  codex-cli.json  copilot-cli.json  cursor.json
src/: config.rs  lib.rs  log.rs  main.rs
src/cmd/: daemon.rs  events.rs  focus.rs  hook.rs  mod.rs  notifications.rs  notify.rs  ssh.rs  test_focus.rs  watch.rs
src/cmd/top/: app.rs  client.rs  colors.rs  keys.rs  mod.rs  ui.rs
src/events/: backend_forwarder.rs  broadcast.rs  device.rs  env_capture.rs  envelope.rs  map.rs  mod.rs  payload.rs  preview.rs  send.rs  severity.rs
src/events/notifications/: mod.rs  notification.rs  rule.rs
src/events/notifications/rules/: agent_completed.rs  agent_notified.rs  mod.rs  permission_pending.rs  watch_completed.rs
src/events/store/: mod.rs  prune.rs  query.rs  schema.rs  write.rs
src/events/summary/: mod.rs  sql.rs  summary.rs
src/events/tiles/: cluster.rs  derive.rs  mod.rs  surfaces.rs  tile.rs
src/focus/: iterm2.rs  mod.rs  powershell.rs  terminal.rs
src/hooks/: detect.rs
src/scraper/: discovery.rs  emit.rs  mod.rs  pricing.rs  state.rs  watcher.rs
src/scraper/parsers/: claude.rs  codex.rs  mod.rs
src/workspace/: locate.rs  mod.rs  types.rs  uri.rs  win32.rs
src/workspace/browsers/: chrome.rs  chrome_windows.rs  mod.rs
src/workspace/ides/: mod.rs  vscode_family.rs  vscode_family_windows.rs
src/workspace/terminals/: cmd.rs  mod.rs  powershell.rs  windows_terminal.rs  windows_tests.rs
tests/: scraper_watcher_real.rs
(+7 files in other folders)
